Merging changes, removing add method tests